# ffms2

./: .gitignore  CMakeLists.txt  build_ffmpeg.ps1  compile.ps1  ffms2.pc.in
.github/workflows/: ci.yml
